# otus--sfinae_and_doxygen

./: CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_361540039eaf4d75c021a5d389bfd05e.html  dir_3dcc5216707a52dff14e3ac424716d97.html  dir_9f6dc51727e6b8aa9896b3ff5053853f.html  dir_a083b6ab84c7ccb68592c70a05f51ba1.html  dir_b4e96b7afc6a819532b14b87f1d11460.html  dir_c787e787158fd710b46a5bbd2f616188.html  dir_e50b5e596ea7fd3b3876850f33cb4b65.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  ip__gen_8h.html  ip__gen_8h__dep__incl.map  (+54 more)
.github/workflows/: release.yml
otus--sfinae_and_doxygen/: CMakeLists.txt  ip_gen.h  main.cpp  otus--sfinae_and_doxygen.cpp  otus--sfinae_and_doxygen.h  test.cpp  traits.h
search/: all_2.js  all_5.js  all_7.js  all_b.js  classes_0.js  classes_1.js  files_1.js  files_4.js  functions_0.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js
