# CMakeList.txt: проект CMake для otus--sfinae_and_doxygen; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (otus--sfinae_and_doxygen "otus--sfinae_and_doxygen.cpp" "otus--sfinae_and_doxygen.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
